# hermes_agent

./: README.md  app.py  db.py  hermes_logs.db  pyproject.toml  test.py  utils.py
data/: shipments.csv
hermes_agent/: agent.py  prompt.py  tools.py
