[project]
name = "hermes_agent"
version = "0.1.0"
description = "Hermes: A lightweight AI Logistics Assistant for query understanding, shipment analytics, and interactive data exploration."
readme = "README.md"
authors = [
    { name = "AlexNhat", email = "anhnhat909940@gmail.com" },
]
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "streamlit>=1.36.0",
    "gradio>=4.0.0",
    "google-adk>=1.19.0",
    "python-dateutil>=2.9.0",
    "sqlalchemy>=2.0.44",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_agent"]

